--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <div class="main-about">
                     <div id="description">
                         <div class="photo" data-aos="fade-right">
+                            <a href="https://www.linkedin.com/in/leonardoabreurodrigues/"><div class="dark-filter" title="Linkedin"></div></a>
                         </div>
                         <hr class="desc-line">
                         <div class="desc">
