--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <h1 id="title-tag">
                     <span id="title-message">OI, eu sou Leonardo Rodrigues</span>
-                    <div id="sub-message"> e sou um desenvolvedor Frontend</div>
+                    <div id="sub-message"> e sou um desenvolvedor de Santos/SP</div>
                 </h1>    
                 <div id="scrollDown"></div>    
             </section>    
@@ -56,7 +56,9 @@
                 <div class="main-about">
                     <div id="description">
                         <div class="photo" data-aos="fade-right">
-                            <a href="https://www.linkedin.com/in/leonardoabreurodrigues/"><div class="dark-filter" title="Linkedin"></div></a>
+                            <a href="https://www.linkedin.com/in/leonardoabreurodrigues/"><div class="dark-filter" title="Linkedin">
+                                <p>linkedin</p>
+                            </div></a>
                         </div>
                         <hr class="desc-line">
                         <div class="desc">
@@ -88,7 +90,7 @@
         </div>
         <div class="container-fluid">
             <section class="portifolio">
-                <h2>Portifolio &#x2615</h2>
+                <h2>Portifolio 💡</h2>
                 <hr data-aos="fade-right" class="section-subline"> 
             </section>
         </div>
