--- a/index.html
+++ b/index.html
@@ -121,7 +121,14 @@
     <script src="js/script.js"></script>
     <footer>
         <div class="rodape">
-            
+            <div class="rodape-up">
+                <a href="" title="Gmail"><img src="images/gmail.png" alt="Gmail"></a>
+                <a href="https://github.com/leoabreu14/" title="Github"><img src="images/gh-white.png" alt="Github"></a>
+                <a href="https://www.linkedin.com/in/leonardoabreurodrigues/" title="Linkedin"><img src="images/linkedin-logo.png" alt="Linkedin"></a>
+            </div>
+            <div class="rodape-down">
+                <p id="rights">Desenvolvido por Leonardo Rodrigues - 2018</p>
+            </div>
         </div>
         
     </footer>
