Atualizando informações do header

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+        <!-- Author: Leonardo Rodrigues
+        Date: 2018
+        Contact: leo.abrodrigues@gmail.com -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Leonardo Rodrigues</title>
+    <title>Leonardo Rodrigues - Desenvolvedor web</title>
+    <meta name=description content="Desenvolvedor Front-End e Web de Santos-SP.Aluno do curso de Sistemas para Internet da FATEC-RL, sou um programador com uma inclinação por programação funcional, interfaces limpas e design gráfico. Bem vindos ao meu Portfolio">
+    <meta name=author content="Leonardo Rodrigues">
+    <meta name="reply-to" content="leo.abrodrigues@gmail.com" />
+    <meta name="robots" content="index, follow" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="css/style.css" />
@@ -43,7 +50,7 @@
 
                 <h1 id="title-tag">
                     <span id="title-message">OI, eu sou Leonardo Rodrigues</span>
-                    <div id="sub-message"> e sou um desenvolvedor de Santos/SP</div>
+                    <div id="sub-message"> e sou um desenvolvedor Web</div>
                 </h1>    
                 <div id="scrollDown"></div>    
             </section>    
