Add algumas meta tags

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Leonardo Rodrigues - Desenvolvedor web</title>
-    <meta name=description content="Desenvolvedor Front-End e Web de Santos-SP.Aluno do curso de Sistemas para Internet da FATEC-RL, sou um programador com uma inclinação por programação funcional, interfaces limpas e design gráfico. Bem vindos ao meu Portfolio">
+    <meta name=description content="Um desenvolvedor de santos-sp, cursando sistemas para internet na Fatec - BS, e amante de interfaces simples e com uma boa performance">
     <meta name=author content="Leonardo Rodrigues">
     <meta name="reply-to" content="leo.abrodrigues@gmail.com" />
     <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Leonardo Rodrigues - Desenvolvedor Web">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="css/style.css" />
