Organizing folders and testing favicon

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <title>Leonardo Rodrigues - Desenvolvedor web</title>
     <meta name=description content="Um desenvolvedor de santos-sp, cursando sistemas para internet na Fatec - BS, e amante de interfaces simples e com uma boa performance">
     <meta name=author content="Leonardo Rodrigues">
+    <link rel="shortcut icon" href="assets/img/icons/favicon.ico" type="image/x-icon">
+    </link rel="icon" href="assets/img/icons/favicon.ico" type="image/x-icon">
     <meta name="reply-to" content="leo.abrodrigues@gmail.com" />
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Leonardo Rodrigues - Desenvolvedor Web">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
     <header>
@@ -63,10 +65,10 @@
                 <div class="main-about">
                     <div id="description">
                         <div class="photo" data-aos="fade-right">
-                            <img src="images/leonardo-rodrigues.jpeg" id="leonardo-rodrigues-img" alt="Leonardo Rodrigues">
+                            <img src="assets/images/leonardo-rodrigues.jpeg" id="leonardo-rodrigues-img" alt="Leonardo Rodrigues">
                             <a href="https://www.linkedin.com/in/leonardoabreurodrigues/"><div class="dark-filter" title="Linkedin">
                                 <!-- <p>linkedin</p> -->
-                                <img src="images/linkedin-logo-64p.png" alt="logo linkedin">
+                                <img src="assets/images/icons/linkedin-logo-64p.png" alt="logo linkedin">
                             </div></a>
                         </div>
                         <hr class="desc-line">
@@ -128,13 +130,13 @@
         </div>
     </main>
     
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <footer id="footer" role="contentinfo">
         <div class="rodape">
             <div class="rodape-up">
-                <a href="" title="Gmail"><img src="images/gmail.png" alt="Gmail"></a>
-                <a href="https://github.com/leoabreu14/" title="Github"><img src="images/gh-white.png" alt="Github"></a>
-                <a href="https://www.linkedin.com/in/leonardoabreurodrigues/" title="Linkedin"><img src="images/linkedin-logo.png" alt="Linkedin"></a>
+                <a href="" title="Gmail"><img src="assets/images/icons/gmail.png" alt="Gmail"></a>
+                <a href="https://github.com/leoabreu14/" title="Github"><img src="assets/images/icons/gh-white.png" alt="Github"></a>
+                <a href="https://www.linkedin.com/in/leonardoabreurodrigues/" title="Linkedin"><img src="assets/images/icons/linkedin-logo.png" alt="Linkedin"></a>
             </div>
             <div class="rodape-down">
                 <p id="rights">Desenvolvido por Leonardo Rodrigues - 2018</p>
