implementanto smooth links

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <div class="bar3"></div>
         </div>
         <ul class="nav navbar-nav">
-            <li class="nav-item"><a href="">About</a></li>
-            <li class="nav-item"><a href="">Portifolio</a></li>
-            <li class="nav-item"><a href="">Contact</a></li>
+            <li class="nav-item"><p id="link_about">About</p></li>
+            <li class="nav-item"><p id="link_portifolio">Portifolio</p></li>
+            <li class="nav-item"><p id="link_contact">Contact</p></li>
         </ul>
     </header>
     <main role="main">
@@ -59,7 +59,7 @@
             <button type="button" id="scrollDown">&#10148;</button>
         </div>
         <div class="container-fluid">
-            <section class="about">
+            <section class="about" id="about_me">
               <!-- &#x1F603 -->
                 <h2>Sobre mim &#x1F603 </h2>
                 <hr data-aos="fade-right" class="section-subline">
@@ -97,7 +97,7 @@ possa evoluir minhas capacidades e skills.
 
         </div>
         <div class="container-fluid">
-            <section class="portifolio">
+            <section class="portifolio" id="my_portifolio">
                 <h2>Portifolio 💡</h2>
                 <hr data-aos="fade-right" class="section-subline">
                 <div class="portifolio_content" data-aos="zoom-in-down">
@@ -130,7 +130,7 @@ possa evoluir minhas capacidades e skills.
             </section>
         </div>
         <div class="container-fluid">
-            <section class="contact">
+            <section class="contact" id="contact_me">
                 <h2>Contato</h2>
                 <hr data-aos="fade-right" class="section-subline">
                 <div id="contato-str">
