--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ possa evoluir minhas capacidades e skills.
                 <h2>Contato</h2>
                 <hr data-aos="fade-right" class="section-subline">
                 <div id="contato-str">
-                    <form action="" class="form-contato" method="POST">
+                    <form action="" class="form-contato" method="POST" id="form_contato">
                         <label for="nome">
                             <input type="text" name="name" id="name" placeholder="Seu nome">
                         </label>
@@ -142,7 +142,7 @@ possa evoluir minhas capacidades e skills.
                             <input type="email" name="email" id="email" placeholder="Seu email">
                         </label>
                         <label for="message">
-                            <textarea name="" id="" cols="30" rows="10" name="message" id="message" placeholder="Digite a menssagem"></textarea>
+                            <textarea cols="30" rows="10" name="message" id="message" placeholder="Digite a menssagem"></textarea>
                         </label>
                         <div class="btn-align">
                             <button type="button" id="form-btn"> Enviar </button>
