--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ possa evoluir minhas capacidades e skills.
                 <h2>Contato</h2>
                 <hr data-aos="fade-right" class="section-subline">
                 <div id="contato-str">
-                    <form action="" class="form-contato" method="POST" id="form_contato">
+                    <form action="https://formspree.io/leoabreu14@gmail.com" class="form-contato" method="POST" id="form_contato">
                         <label for="nome">
                             <input type="text" name="name" id="name" placeholder="Seu nome">
                         </label>
@@ -145,7 +145,7 @@ possa evoluir minhas capacidades e skills.
                             <textarea cols="30" rows="10" name="message" id="message" placeholder="Digite a menssagem"></textarea>
                         </label>
                         <div class="btn-align">
-                            <button type="button" id="form-btn"> Enviar </button>
+                            <button type="submit" id="form-btn"> Enviar </button>
                         </div>
 
                     </form>
