--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ possa evoluir minhas capacidades e skills.
         </div>
         <div class="container-fluid">
             <section class="portifolio" id="my_portifolio">
-                <h2>Portifolio 💡</h2>
+                <h2>Portifolio (Lab) 💡</h2>
                 <hr data-aos="fade-right" class="section-subline">
                 <div class="portifolio_content" data-aos="zoom-in-down">
 
