--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <h1 id="title-tag">
                     <span id="title-message">OI, eu sou Leonardo Rodrigues</span>
-                    <div id="sub-message"> e sou um desenvolvedor front end</div>
+                    <div id="sub-message"> e sou um desenvolvedor web</div>
                 </h1>
             </section>
             <button type="button" id="scrollDown">&#10148;</button>
